# zc_exp

turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  (+2 more)
zc_exp/: CMakeLists.txt  package.xml
zc_exp/config/: config_real.yaml  config_sim.yaml  real.rviz  rviz.rviz
zc_exp/launch/: experiment_real.launch  experiment_sim.launch  multibot.launch  multibot_copy.launch
zc_exp/src/: estimation.cpp  estimation.h  estimation_compare.cpp  estimation_compare.h  experiment_node.cpp  experiment_node.h  follower.cpp  follower.h  leader.cpp  leader.h  utils.cpp  utils.h
zc_exp/src/log/: 2023-01-06 07:40:50.csv  2023-01-07 08:32:21.csv  2023-01-07 08:33:00.csv  2023-01-07 08:33:24.csv  2023-01-07 08:33:36.csv  2023-01-07 08:34:05.csv  2023-01-07 08:40:40.csv  2023-01-07 08:40:59.csv  2023-01-07 08:42:11.csv  2023-01-07 08:44:08.csv  2023-01-07 08:50:43.csv  2023-01-07 08:53:31.csv  2023-01-07 08:57:33.csv  2023-01-07 08:59:32.csv  2023-01-07 09:04:08.csv  2023-01-07 09:04:27.csv  2023-01-07 09:05:58.csv  2023-01-07 09:06:44.csv  2023-01-07 09:07:57.csv  2023-01-07 09:16:15.csv  2023-01-07 09:17:32.csv  2023-01-07 09:18:54.csv  2023-01-07 09:48:13.csv  2023-01-07 09:54:19.csv  2023-01-07 09:57:22.csv  2023-01-07 09:59:05.csv  2023-01-07 10:01:20.csv  2023-01-07 10:03:28.csv  2023-01-07 10:08:15.csv  2023-01-07 10:09:49.csv  2023-01-07 10:14:43.csv  2023-01-07 10:16:10.csv  2023-01-07 10:22:14.csv  2023-01-07 10:23:23.csv  2023-01-07 10:25:52.csv  2023-01-07 10:27:49.csv  2023-01-07 10:30:17.csv  2023-01-07 10:31:08.csv  2023-01-07 10:31:54.csv  2023-01-07 10:34:57.csv  (+16 more)
(+2 files in other folders)
